--- a/index.html
+++ b/index.html
@@ -227,7 +227,7 @@
 	<!-- Footer -->
 	<footer class="attribution">
 		Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>.
-		Coded by <a href="#">Your Name Here</a>.
+		Coded by <a href="#">Srijan Saini</a>.
 	</footer>
 
 	<script src="index.js"></script>
